deploy/platformstorageapi.gke.yml
apiVersion: v1
kind: Service
metadata:
  name: platformstorageapi
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    service: platformstorageapi
