deploy/platformapi.gke.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platformapi
spec:
  replicas: 1
  selector:
    matchLabels:
      service: platformapi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: platformapi
    spec:
      containers:
      - name: platformapi
        image: gcr.io/light-reality-205619/platformapi-k8s:latest
        imagePullPolicy: Always
      - name: kubeproxy
        image: lachlanevenson/k8s-kubectl:v1.10.3
        args: [proxy]
---
apiVersion: v1
kind: Service
metadata:
  name: platformapi
spec:
  type: ClusterIp
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    service: platformapi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platformapi-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: platform.dev.neuromation.io
    http:
      paths:
      - path: /api/v1/storage
        backend:
          serviceName: platformstorageapi
          servicePort: 8080
      - path: /api/v1
        backend:
          serviceName: platformapi
          servicePort: 8080
