deploy/platformingress.gke.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platformjobsingress
spec:
  rules:
  - host: unknown
