deploy/platformjobsingress.gke.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platformjobsingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: unknown
